@@ -18,10 +18,14 @@
 
 package org.apache.giraph.worker;
 
+import org.apache.giraph.bsp.CentralizedServiceWorker;
+import org.apache.giraph.comm.requests.SendWorkerToWorkerMessageRequest;
 import org.apache.giraph.conf.DefaultImmutableClassesGiraphConfigurable;
 import org.apache.giraph.graph.GraphState;
 import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.mapreduce.Mapper;
+
+import java.util.List;
 
 /**
  * WorkerContext allows for the execution of user code
@@ -29,12 +33,20 @@ import org.apache.hadoop.mapreduce.Mapper;
  */
 @SuppressWarnings("rawtypes")
 public abstract class WorkerContext
-  extends DefaultImmutableClassesGiraphConfigurable
-  implements WorkerAggregatorUsage {
+    extends DefaultImmutableClassesGiraphConfigurable
+    implements WorkerAggregatorUsage {
+
   /** Global graph state */
   private GraphState graphState;
   /** Worker aggregator usage */
   private WorkerAggregatorUsage workerAggregatorUsage;
+
+  /** Service worker */
+  private CentralizedServiceWorker serviceWorker;
+  /** Sorted list of other participating workers */
+  private List<WorkerInfo> workerList;
+  /** Index of this worker within workerList */
+  private int myWorkerIndex;
 
   /**
    * Set the graph state.
@@ -43,6 +55,17 @@ public abstract class WorkerContext
    */
   public void setGraphState(GraphState graphState) {
     this.graphState = graphState;
+  }
+
+  /**
+   * Setup superstep.
+   *
+   * @param serviceWorker Service worker containing all the information
+   */
+  public void setupSuperstep(CentralizedServiceWorker<?, ?, ?> serviceWorker) {
+    this.serviceWorker = serviceWorker;
+    workerList = serviceWorker.getWorkerInfoList();
+    myWorkerIndex = workerList.indexOf(serviceWorker.getWorkerInfo());
   }
 
   /**
@@ -79,6 +102,52 @@ public abstract class WorkerContext
    * superstep starts.
    */
   public abstract void preSuperstep();
+
+  /**
+   * Get number of workers
+   *
+   * @return Number of workers
+   */
+  public int getWorkerCount() {
+    return workerList.size();
+  }
+
+  /**
+   * Get index for this worker
+   *
+   * @return Index of this worker
+   */
+  public int getMyWorkerIndex() {
+    return myWorkerIndex;
+  }
+
+  /**
+   * Get messages which other workers sent to this worker and clear them (can
+   * be called once per superstep)
+   *
+   * @return Messages received
+   */
+  public List<Writable> getAndClearMessagesFromOtherWorkers() {
+    return serviceWorker.getServerData().
+        getAndClearCurrentWorkerToWorkerMessages();
+  }
+
+  /**
+   * Send message to another worker
+   *
+   * @param message Message to send
+   * @param workerIndex Index of the worker to send the message to
+   */
+  public void sendMessageToWorker(Writable message, int workerIndex) {
+    SendWorkerToWorkerMessageRequest request =
+        new SendWorkerToWorkerMessageRequest(message);
+    if (workerIndex == myWorkerIndex) {
+      request.doRequest(serviceWorker.getServerData());
+    } else {
+      serviceWorker.getWorkerClient().sendWritableRequest(
+          workerList.get(workerIndex).getTaskId(), request);
+    }
+  }
 
   /**
    * Execute user code.
